Fix A11y contrast issues

--- a/_src/_includes/css/global.css
+++ b/_src/_includes/css/global.css
@@ -138,7 +138,6 @@ blockquote p:not([class]) {
 
 figcaption {
 	margin-top: 1rem;
-	color: var(--color-gray-500);
 	font-size: smaller;
 }
 
