--- a/_src/_includes/css/utilities/eyebrow.css
+++ b/_src/_includes/css/utilities/eyebrow.css
@@ -1,6 +1,5 @@
 .u-eyebrow {
 	font-size: 1rem;
-	color: var(--color-subtext);
 	text-transform: uppercase;
 	letter-spacing: 1px;
 } 
